Changed Instruction Service batch processing methods to actually set a payload of Instructions list.